fixed navbar on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ body {
         flex-direction: column;
         background-color: black;
         position: absolute;
-        top: -277px;
+        top: -349px;
         left: 0;
         width: 100%;
         transition: 0.4s;
